--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -64,7 +64,7 @@
     <Analyzer Include="C:\Program Files\Unity\Hub\Editor\Unity 2022.3.37f1\Editor\Data\Tools\Unity.SourceGenerators\Unity.Properties.SourceGenerator.dll" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Assets\MovingBG.cs" />
+    <Compile Include="Assets\Scripts\MovingBG.cs" />
     <Compile Include="Assets\mhk.cs" />
   </ItemGroup>
   <ItemGroup>
