--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -69,6 +69,7 @@
     <Compile Include="Assets\Scripts\PlayerMovements.cs" />
     <Compile Include="Assets\Scripts\MovingBG.cs" />
     <Compile Include="Assets\mhk.cs" />
+    <Compile Include="Assets\Scripts\BombSpawner.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\TileSet\DarkForest\about.txt" />
