Added moving platform and ladder properties.

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -62,7 +62,10 @@
     <Compile Include="Assets\Scripts\PlayerCombat.cs" />
     <Compile Include="Assets\Scripts\PlayerMovements.cs" />
     <Compile Include="Assets\MovingBG.cs" />
+    <Compile Include="Assets\Scripts\LadderClimbing.cs" />
     <Compile Include="Assets\mhk.cs" />
+    <Compile Include="Assets\Scripts\MovingPlatform.cs" />
+    <Compile Include="Assets\Scripts\LadderDetector.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\TileSet\DarkForest\about.txt" />
