Final commit of level3 branch.

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -61,6 +61,7 @@
   <ItemGroup>
     <Compile Include="Assets\Scripts\PlayerCombat.cs" />
     <Compile Include="Assets\Scripts\PlayerMovements.cs" />
+    <Compile Include="Assets\Scripts\EnemyGFX.cs" />
     <Compile Include="Assets\MovingBG.cs" />
     <Compile Include="Assets\Scripts\LadderClimbing.cs" />
     <Compile Include="Assets\mhk.cs" />
