--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -70,7 +70,10 @@
     <Compile Include="Assets\Scripts\PlayerMovements.cs" />
     <Compile Include="Assets\Scripts\MovingBG.cs" />
     <Compile Include="Assets\mhk.cs" />
+    <Compile Include="Assets\Scripts\Key.cs" />
     <Compile Include="Assets\Scripts\BombSpawner.cs" />
+    <Compile Include="Assets\Scripts\Door.cs" />
+    <Compile Include="Assets\Scripts\DoorOpen.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\TileSet\DarkForest\about.txt" />
